--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
     <ul>
       <li><strong>Generador de preguntes</strong> per a Matemàtiques (aritmètica, fraccions, percentatges, equacions, geometria, estadística, unitats), Llengua catalana i castellana (ortografia, categories gramaticals, sintaxi), Química (elements, fórmules i compostos) i Geografia (països i banderes).</li>
       <li><strong>Temps opcional</strong>, nivell 1–4, i repàs de només les preguntes errònies.</li>
-      <li><strong>Historial exportable</strong> a CSV i <strong>mode offline</strong> (funciona sense internet).</li>
+      <li><strong>Historial exportable</strong> a CSV i <strong>gràfics de rendiment</strong> (funciona sense internet).</li>
       <li><strong>Tutor personalitzat</strong> que t’acompanya pas a pas en l’aprenentatge.</li>
     </ul>
   </div>
