Add learning capsules entry point and subtraction module

--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
   <div id="recommendationText" class="subtitle">Carregant recomanació...</div>
 </div>
 
+    <a class="learning-card" href="capsules.html">
+      <div class="learning-icon" aria-hidden="true">🎓</div>
+      <div class="learning-body">
+        <p class="learning-kicker">Nou espai</p>
+        <h3 class="learning-title">Espai d'aprenentatge</h3>
+        <p class="learning-copy">Accedeix a càpsules guiades per practicar pas a pas abans de fer els exàmens.</p>
+      </div>
+      <span class="learning-pill">Entrar →</span>
+    </a>
+
     <script>
 document.addEventListener('DOMContentLoaded', ()=>{
   // 🔹 Mostra recomanació del tutor
