--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="learning-icon" aria-hidden="true">🎓</div>
       <div class="learning-body">
         <p class="learning-kicker">Nou espai</p>
-        <h3 class="learning-title">Espai d'aprenentatge</h3>
+        <h3 class="learning-title">Espai d'aprenentatge (en construcció)</h3>
         <p class="learning-copy">Accedeix a càpsules guiades per practicar pas a pas abans de fer els exàmens.</p>
       </div>
       <span class="learning-pill">Entrar →</span>
